<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base_white"
    tools:context="com.gendra.appgendraexamen.ui.mapfragment.MapFragment">


    <LinearLayout
        android:id="@+id/lyPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/base_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/one_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyCdPostal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEtCdPostale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_cdPostale"
                    android:inputType="number"
                    android:maxLength="5"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/txtInLyCdPostal_o"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInEtCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_country"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvNumCdPostal"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/txt_num_of_total"
            android:textSize="12dp"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInLyCdPostal" />

        <LinearLayout
            android:id="@+id/two_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyEntity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNumCdPostal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEtEntity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_entity"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/txtInLyEntity"
                app:layout_constraintTop_toBottomOf="@+id/tvNumCdPostal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInEtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_city"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/three_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyMunicipality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInLyEntity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputEtMunicipality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_municipality"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInLyColony"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_violet_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toEndOf="@+id/txtInLyMunicipality"
                app:layout_constraintTop_toBottomOf="@+id/txtInLyCity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInEtColony"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_colony"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColorHint="@color/base_red"
                    android:textColorLink="@color/base_red" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyPanel"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <fragment
                android:id="@+id/mapCoordinates"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                tools:ignore="RtlHardcoded" />

        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>